# if_heatmap

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
dados/: QGIS_queries_2024_08_27_II.csv
src/: 01_atualizar_banco_de_dados.py  01_mapa_de_calor.py  backend.py  config.py  contrato.py  frontend.py
src/backend/: backend.py  contrato.py  flask_end_point.py
src/frontend/: frontend.py
src/pages/: 02_atualizar_banco_de_dados.py
